--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,8 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+@import "@angular/material/prebuilt-themes/purple-green.css";
+html, body { height: 100%; }
 body{
   margin: 0;
   padding: 0;
-  background-color: #E8EFE4;
+  background-color: #FFFFFF;
+  font-family: "Roboto", sans-serif;
 }
+
 
 
