--- a/frontend/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/frontend/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -1,1 +1,64 @@
-<p>admin-dashboard works!</p>
+
+<h1>Panel administracyjny</h1>
+
+<button mat-raised-button color="primary" [routerLink]="['/admin', 'add-animal']">Dodaj zwierzę</button>
+
+<table mat-table [dataSource]="animals">
+
+  <ng-container matColumnDef="id">
+    <th mat-header-cell *matHeaderCellDef> ID</th>
+    <td mat-cell *matCellDef="let animal"> {{ animal.id }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef> Imię</th>
+    <td mat-cell *matCellDef="let animal"> {{ animal.name }}</td>
+  </ng-container>
+
+
+  <ng-container matColumnDef="species">
+    <th mat-header-cell *matHeaderCellDef> Gatunek</th>
+    <td mat-cell *matCellDef="let animal"> {{ animal.species.name }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="morph">
+    <th mat-header-cell *matHeaderCellDef> Umaszczenie</th>
+    <td mat-cell *matCellDef="let animal">
+      <span *ngFor="let morph of animal.morphs">{{ morph.name }} </span>
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="forSale">
+    <th mat-header-cell *matHeaderCellDef> Na sprzedarz</th>
+    <td mat-cell *matCellDef="let animal">
+      <span *ngIf="animal.animalForSale">Tak</span>
+      <span *ngIf="!animal.animalForSale">Nie</span>
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="reservationStatus">
+    <th mat-header-cell *matHeaderCellDef> Status rezerwacji</th>
+    <td mat-cell *matCellDef="let animal">
+      <span *ngIf="animal.animalForSale">{{animal.animalForSale.reservationStatus}}</span>
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="price">
+    <th mat-header-cell *matHeaderCellDef> Cena</th>
+    <td mat-cell *matCellDef="let animal">
+      <span *ngIf="animal.animalForSale">{{animal.animalForSale.price}}</span>
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef> Akcje</th>
+    <td mat-cell *matCellDef="let animal">
+      <button mat-button color="primary" [routerLink]="['/admin-dashboard', 'edit-animal', animal.id]">Edytuj</button>
+      <button mat-button color="warn" (click)="deleteAnimal(animal.id)" >Usuń</button>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+</table>
