--- a/frontend/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/frontend/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -1,4 +1,3 @@
-
 <h1>Panel administracyjny</h1>
 
 <button mat-raised-button color="primary" [routerLink]="['/admin', 'add-animal']">Dodaj zwierzę</button>
@@ -24,37 +23,63 @@
   <ng-container matColumnDef="morph">
     <th mat-header-cell *matHeaderCellDef> Umaszczenie</th>
     <td mat-cell *matCellDef="let animal">
-      <span *ngFor="let morph of animal.morphs">{{ morph.name }} </span>
+      @for (morph of animal.morphs; track $index) {
+        <span>{{ morph.name }} </span>
+      }
     </td>
   </ng-container>
 
   <ng-container matColumnDef="forSale">
     <th mat-header-cell *matHeaderCellDef> Na sprzedarz</th>
     <td mat-cell *matCellDef="let animal">
-      <span *ngIf="animal.animalForSale">Tak</span>
-      <span *ngIf="!animal.animalForSale">Nie</span>
+      @if (animal.animalForSale) {
+        <span>Tak</span>
+      } @else {
+        <span>Nie</span>
+      }
     </td>
   </ng-container>
 
   <ng-container matColumnDef="reservationStatus">
     <th mat-header-cell *matHeaderCellDef> Status rezerwacji</th>
     <td mat-cell *matCellDef="let animal">
-      <span *ngIf="animal.animalForSale">{{animal.animalForSale.reservationStatus}}</span>
+      @if (animal.animalForSale) {
+        <span>{{ animal.animalForSale.reservationStatus }}</span>
+      }
     </td>
   </ng-container>
 
   <ng-container matColumnDef="price">
     <th mat-header-cell *matHeaderCellDef> Cena</th>
     <td mat-cell *matCellDef="let animal">
-      <span *ngIf="animal.animalForSale">{{animal.animalForSale.price}}</span>
+      @if (animal.animalForSale) {
+        <span>{{ animal.animalForSale.price }}</span>
+      }
     </td>
   </ng-container>
 
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef> Akcje</th>
     <td mat-cell *matCellDef="let animal">
+      @if (animal.animalForSale) {
+        <button mat-button color="primary"
+                [disabled]="animal.animalForSale.reservationStatus === reservationStatus.for_sale"
+                (click)="updateReservationStatus(animal.id,reservationStatus.for_sale)">
+          Na sprzedarz
+        </button>
+        <button mat-button color="primary"
+                [disabled]="animal.animalForSale.reservationStatus === reservationStatus.reserved"
+                (click)="updateReservationStatus(animal.id,reservationStatus.reserved)">
+          Zarezerwowane
+        </button>
+        <button mat-button color="primary"
+                [disabled]="animal.animalForSale.reservationStatus === reservationStatus.sold"
+                (click)="updateReservationStatus(animal.id,reservationStatus.sold)">
+          Sprzedane
+        </button>
+      }
       <button mat-button color="primary" [routerLink]="['/admin-dashboard', 'edit-animal', animal.id]">Edytuj</button>
-      <button mat-button color="warn" (click)="deleteAnimal(animal.id)" >Usuń</button>
+      <button mat-button color="warn" (click)="deleteAnimal(animal.id)">Usuń</button>
     </td>
   </ng-container>
 
