--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -4,7 +4,7 @@ html, body { height: 100%; }
 body{
   margin: 0;
   padding: 0;
-  background-color: #FFFFFF;
+  background-color: floralwhite;
   font-family: "Roboto", sans-serif;
 }
 
