--- a/frontend/src/app/components/photo/photo.component.html
+++ b/frontend/src/app/components/photo/photo.component.html
@@ -1,3 +1,1 @@
-<div *ngIf="photoUrl">
-  <img [ngSrc]="photoUrl" [alt]="photoName" [width]="width" [height]="height" priority>
-</div>
+<img [src]="photoUrl" [ngStyle]="{'width': width , 'height' : height}" [alt]="photoName">
