CHANGE background to ghostwhite

--- a/frontend/src/app/components/footer/footer.component.css
+++ b/frontend/src/app/components/footer/footer.component.css
@@ -1,7 +1,7 @@
 .container
 {
   text-align: center;
-  background-color: #D1DED3;
+  background-color: ghostwhite;
   padding-top: 1em;
   padding-bottom: 1em;
 
