--- a/frontend/src/app/components/navbar/navbar.component.css
+++ b/frontend/src/app/components/navbar/navbar.component.css
@@ -2,21 +2,25 @@
   position: sticky;
   display: flex;
   justify-content: flex-start;
-  gap: 4em;
+  gap: 3em;
   align-items: center;
-  font-size: x-large;
-  background-image: linear-gradient(to right, #0cc0df, #75ff59);
-  height: 10vh;
+  font-size: medium;
+  background-color: ghostwhite;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+  height: 7vh;
   width: 100%;
   top: 0;
   box-sizing: border-box;
-  padding-left: 3em;
+  padding-left: 6em;
   z-index: 999;
 }
 
-.nav img {
+.nav p {
+  margin-left: 45em;
+}
+
+nav img{
   height: 7vh;
   width: 7vw;
-  margin-left: 18em;
 }
 
