--- a/frontend/src/app/components/admin-dashboard/animal-form/animal-form.component.css
+++ b/frontend/src/app/components/admin-dashboard/animal-form/animal-form.component.css
@@ -20,10 +20,19 @@
   position: relative;
 }
 
+.photoList-summary
+{
+  display: flex ;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding-top : 1em;
+}
+
 .photo-preview {
   min-width: 15em;
   max-width: 15em;
 }
+
 
 .drop-zone {
   border: 2px dashed #ccc;
@@ -37,7 +46,6 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-
 }
 
 .drop-zone.drag-over {
@@ -77,4 +85,40 @@
 
 button {
   margin-bottom: 1em;
+}
+
+
+.summary {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 1em;
+}
+
+.summary-item {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: fit-content;
+  padding: 0.5em;
+}
+
+.summary-item:nth-child(odd) {
+  background-color: #f5f5f5;
+}
+
+.buttonFormContainer {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 1em;
+  padding-top: 1em;
+}
+
+.buttonContainer {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 1em;
+  padding-top: 1em;
+  padding-right: 1em;
+  padding-left: 1em;
 }
