Change src to ngSrc

--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -2,6 +2,9 @@
   <button mat-button routerLink="/">Home
     <mat-icon fontIcon="home"></mat-icon>
   </button>
+  <button mat-button routerLink="/animal">Zwierzęta
+    <mat-icon fontIcon="pets"></mat-icon>
+  </button>
   <button mat-button routerLink="/order-terrarium">Terraria
     <mat-icon fontIcon="dashboard"></mat-icon>
   </button>
@@ -16,7 +19,7 @@
   </button>
 
   <p>Gekony Tropirria</p>
-  <img src="assets/logo.svg" alt="logo">
+  <img ngSrc="assets/logo.svg" alt="logo" height="512" width="512">
 
 </nav>
 
