--- a/frontend/src/app/components/landing-page/landing-page.component.css
+++ b/frontend/src/app/components/landing-page/landing-page.component.css
@@ -21,17 +21,13 @@
 
 
 .nav-container{
-  width: 80%;
-  height: 10vh;
+  width: 90%;
 
 }
 
 
 .animals{
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, auto);
-  grid-auto-flow: row;
-  gap: 2em;
-  margin-top: 3em;
+  width: 80%;
+  text-align: center;
+  margin-bottom: 2em;
 }
